--- a/main.css
+++ b/main.css
@@ -1,3 +1,9 @@
 body label {
 	display: inline-block;
 }
+
+
+
+/*CSS DIRECTIONS: If the temperature is greater than 90F/32C the color of the converted temperature should be red.
+If the temperature is less than 32F/0C the color of the converted temperature should be blue.
+For any other temperature, the color should be green.*/
