--- a/main.css
+++ b/main.css
@@ -1,8 +1,11 @@
-body label {
-	display: inline-block;
+body {
+	display: flex;
+	justify-content: row;
 }
 
+input {
 
+}
 
 /*CSS DIRECTIONS: If the temperature is greater than 90F/32C the color of the converted temperature should be red.
 If the temperature is less than 32F/0C the color of the converted temperature should be blue.
