--- a/main.css
+++ b/main.css
@@ -3,10 +3,14 @@ body {
 	justify-content: row;
 }
 
-input {
-
+.red {
+	color: red;
 }
 
-/*CSS DIRECTIONS: If the temperature is greater than 90F/32C the color of the converted temperature should be red.
-If the temperature is less than 32F/0C the color of the converted temperature should be blue.
-For any other temperature, the color should be green.*/
+.blue {
+	color: blue;
+}
+
+.green {
+	color: green;
+}
